@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020111105"
+#define public MagickPackageVersionAddendum ".020111106"
 #define public MagickPackageReleaseDate "unreleased"
