@@ -1,3 +1,8 @@
+2011-11-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/analyze.c (GetImageBoundingBox): Add a special case to
+	handle absolute color comparison.
+
 2011-11-05  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* png: Update libpng to 1.5.6 release.
